--- a/JM-main-main/SNS-PROJECT/board-front/src/views/Main/style.css
+++ b/JM-main-main/SNS-PROJECT/board-front/src/views/Main/style.css
@@ -1,214 +1,218 @@
 #main-top-wrapper {
-    padding: 0px 0 40px;
+  padding: 0px 0 40px;
 
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .main-top-container {
-    width: 1200px;
-    min-width: 1200px;
+  width: 1200px;
+  min-width: 1200px;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 56px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 56px;
 }
 
 .main-top-title {
-    color: rgba(0, 0, 0, 1);
-    padding: 40px 0 40px;
-    text-align: center;
+  color: rgba(0, 0, 0, 1);
+  padding: 40px 0 40px;
+  text-align: center;
 
-    font-family: GimhaeGaya;
-    font-size: 40px;
-    font-weight: 400 ;
-    line-height: 140%;
-    letter-spacing: -0.8px;
+  font-family: GimhaeGaya;
+  font-size: 40px;
+  font-weight: 400 ;
+  line-height: 140%;
+  letter-spacing: -0.8px;
 
-    white-space: pre-wrap;  
+  white-space: pre-wrap;  
 }
 
 .main-top-title strong {
-    font-size: 45px;
-    font-weight: bold;
+  font-size: 45px;
+  font-weight: bold;
 }
 
 .main-top-contents-box {
-    width: 100%;
+  width: 100%;
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
 }
 
 .main-top-contents-title {
-    color: rgba(0, 0, 0, 1);
+  color: rgba(0, 0, 0, 1);
 
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 140%;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 140%;
 }
 
 .sidebar{ /* 변경된 부분 */
-    position: fixed;
-    left: 0px; 
-    width: 250px;
-    height: 1000px;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-    background-color: #fff;
-    padding: 24px;
-   
-    transition: left 0.3s ease;
-    border-right: 0.5px solid #f4f4f4;
-  }
-   
+  position: fixed;
+  left: 0px; 
+  width: 250px;
+  height: 1000px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  background-color: #fff;
+  padding: 24px;
+ 
+  transition: left 0.3s ease;
+  border-right: 0.5px solid #f4f4f4;
+}
+ 
 
 .sidebar .head {
-    display: flex;
-    gap: 20px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #f6f6f6;
-  }
+  display: flex;
+  gap: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #f6f6f6;
+}
 
 .main-top-contents {
-    display: flex;
-    justify-content: space-between;
-    gap: 24px;
+  display: flex;
+  justify-content: space-between;
+  gap: 24px;
 }
 
 .user-img {
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    overflow: hidden;
-  }
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  overflow: hidden;
+}
 
-  .user-img img {
-    width: 100%;
-    object-fit: cover;
-  }
+.user-img img {
+  width: 100%;
+  object-fit: cover;
+}
 
-  .user-details .title,
+.user-details .title,
 .menu .title {
-  font-size: 0px;
-  font-weight: 500;
-  color: #757575;
-  text-transform: uppercase;
-  margin-bottom: 10px;
+font-size: 0px;
+font-weight: 500;
+color: #757575;
+text-transform: uppercase;
+margin-bottom: 10px;
 }
 
 
 .user-details .name {
-  font-size: 25px;
-  font-weight: 500;
+font-size: 25px;
+font-weight: 500;
 }
 .nav {
-  flex: 1;
+flex: 1;
 }
 .menu ul li {
-  position: relative;
-  list-style: none;
-  margin-bottom: 5px;
+position: relative;
+list-style: none;
+margin-bottom: 5px;
 }
 
 .menu ul li a {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    font-size: 23px;
-    font-weight: 500;
-    color: #090909;
-    text-decoration: none;
-    padding: 12px 8px;
-    border-radius: 8px;
-    transition: all 0.3s;
-  }
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  font-size: 23px;
+  font-weight: 500;
+  color: #090909;
+  text-decoration: none;
+  padding: 12px 8px;
+  border-radius: 8px;
+  transition: all 0.3s;
+}
 
-  
+
 
 #main-bottom-wrapper {
-    padding: 40px 0;
+  padding: 40px 0;
 
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .main-bottom-container {
-    width: 1200px;
-    min-width: 1200px;
-    display: flex;
-    flex-direction: column;
+  width: 1200px;
+  min-width: 1200px;
+  display: flex;
+  flex-direction: column;
 
-    gap: 20px;
+  gap: 20px;
 }
 
 .main-bottom-title {
-    color: rgba(0, 0, 0, 1);
+  color: rgba(0, 0, 0, 1);
 
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 140%;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 140%;
 }
 
 .main-bottom-contents-box {
-    width: 100%;
+  width: 100%;
 
-    display: grid;
+  display: grid;
 
-    grid-template-columns: 8fr 4fr;
-    gap: 24px;
+  grid-template-columns: 8fr 4fr;
+  gap: 24px;
 }
 
 .main-bottom-current-contents {
-    grid-column: 1/2;
+  grid-column: 1/2;
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    gap: 16px;
+  gap: 16px;
 }
 
 .main-bottom-popular-box {
-    grid-column: 2/3;
+  grid-column: 2/3;
 }
 
 .main-bottom-popular-card {
-    padding: 24px;
+  padding: 24px;
 
-    background-color: rgba(255, 255, 255, 1);
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .main-bottom-popular-card-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    gap: 24px;
+  gap: 24px;
 }
 
 .main-bottom-popular-card-title {
-    color: rgba(0, 0, 0, 1);
+  color: rgba(0, 0, 0, 1);
 
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 140%;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 140%;
 }
 
 .main-bottom-popular-card-contents {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 
-    gap: 12px;
+  gap: 12px;
 }
 
 .main-bottom-pagination-box {
-    margin-top: 60px;
-    display: flex;
-    justify-content: center;
+  margin-top: 60px;
+  display: flex;
+  justify-content: center;
 } 
 
+/* iframe의 테두리 없애기 */
+iframe {
+  border: none;
+}
